# corona-calculator

./: .gitignore  LICENSE  Procfile  README.md  app.py  corona-calculator.py  fetch_live_data.py  graphing.py  models.py  pyproject.toml  requirements.txt  s3_utils.py  setup.sh  sir_model.py  utils.py
data/: PopulationAgeSex-20200317101235.xlsx  README.md  age_data.csv  constants.py  countries.py  country_data.csv  demographics.csv  latest_daily_country_data.csv  latest_disease_data.csv  mortality_and_hospitalization_by_age.csv  preprocessing.py  process_bed_data.py  utils.py  world_bank_bed_data.csv
interface/: css.py  elements.py  sidebar.py
