[tool.poetry]
name = "corona-calculator"
version = "0.1.0"
description = ""
authors = ["Archy de Berker <archy.deberker@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
streamlit = "^0.56.0"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
